[tool.poetry]
name = "stack-overflow-developer-survey-charts"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
jupyter = ">=1.0.0"
matplotlib = ">=3.0.2"
numpy = ">=1.15.4"
pandas = ">=0.23.0"
requests = ">=2.20.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
