[tool.poetry]
name = "stack-overflow-developer-survey-charts-2018"
version = "0.1.0"
description = ""
authors = ["Goto Hayato <gh640@hey.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
pandas = "^1.2.4"
matplotlib = "^3.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
